--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/Devil-Botz/Elsa",
+    "website": "https://github.com/CyberTG/Elsa",
     "repository": "https://github.com/CyberTG/Elsa",
     "env": {
         "BOT_TOKEN": {
